# workshop-data-quality

./: README.md  example.env  my_duckdb.db  pyproject.toml
app/: etl.py  funcao.py  let_duck.db.py  schema.py  schema_email.py
docs/: index.md
exemplo/: exemplo00.py  exemplo01.py  exemplo02.py
tests/: test_func_etl.py  test_function_hello_world.py
