[tool.poetry]
name = "workshop-data-quality"
version = "0.1.0"
description = ""
authors = ["Rafael Jürkfitz <rafaeljurkfitz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.28"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
taskipy = "^1.13.0"
isort = "^5.13.2"
black = "^24.4.2"
pytest = "^8.2.2"
pydantic = "^2.8.2"
pandas = "^2.2.2"
pandera = {extras = ["io"], version = "^0.20.1"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
duckdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"